# Royal-Hackaway-V8

./: README.md  docker-compose.yml  run.py
backend/: .env  Dockerfile  __init__.py  auth.py  file_upload.py  pyproject.toml  requirements.txt  run.py
backend/ai/: chat_bot.py  data_analysist.py  data_prediction.py  data_reporter.py  prompts.py  test.py  testall.py  visualization_types.py
backend/data_preprocessing/: clean_data.py  cleaned_hotel_book.csv  cleanfood.csv  data_dictionary.json  data_profiler.py  preprocessing.py  scale.py  scaled_food.csv
backend/flask_app/: __init__.py  askd.py  auth.py  db.py  file_upload.py  projects.py
backend/flask_app/models/: Collection.py  DataFile.py  Project.py  User.py
backend/models/: DataFile.py  User.py
frontend/: Dockerfile  bun.lockb  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/analytics/(components)/: Chat.tsx  MetricCard.tsx
frontend/src/app/analytics/[id]/: page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/home/(components)/: AddProjectCard.tsx  AddProjectDialog.tsx  ProjectCard.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/projects/[id]/: page.tsx
frontend/src/app/projects/[id]/(components)/: AddDatasetCard.tsx  (+4 more)
frontend/src/app/signup/: page.tsx
frontend/src/app/utils/: auth.tsx
frontend/src/components/: Footer.tsx  ThemeProvider.tsx  app-sidebar.tsx  icons.tsx
frontend/src/components/landing/: Hero.tsx
frontend/src/components/ui/: sidebar.tsx
