[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.2.1",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "flask-jwt-extended>=4.7.1",
    "langchain>=0.3.18",
    "langchain-groq>=0.2.4",
    "langgraph>=0.2.70",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pymongo>=4.11",
    "scikit-learn>=1.6.1",
]
